<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.user.ProfileFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/gif_logo3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/splash" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/frame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gif_logo3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|top"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/aldrich"
                android:text="@string/my_profile"
                android:textColor="@color/primary"
                android:textSize="40sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_userName_profile"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="-30dp"
                android:drawableTint="@color/backGround"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:hint="@string/user_name"
                android:textColor="@color/backGround"
                android:textColorHint="@color/backGround"
                android:textSize="20sp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/backGround" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_email_Profile"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@color/textAd"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="-30dp"
                android:drawableTint="@color/backGround"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textColor="@color/backGround"
                android:textColorHint="@color/backGround"
                android:textSize="20sp"
                app:endIconTint="@color/backGround" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_Phone_profile"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:background="@color/white"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="-30dp"
                android:drawableTint="@color/backGround"
                android:fontFamily="@font/aldrich"
                android:gravity="center"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/backGround" />

            <TextView
                android:id="@+id/logOut"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/aldrich"
                android:text="@string/sign_out"
                android:textColor="@color/red"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_log_out" />

            <Button
                android:id="@+id/btnSaveEdit"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/btn_style"
                android:fontFamily="@font/aldrich"
                android:text="@string/save"
                android:textColor="@color/backGround"
                android:textStyle="bold" />


        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>